# asset-filter

./: .gitignore  LICENSE  README.md  build.bat  build_log.txt  pyproject.toml  requirements.txt  run.bat  setup.bat
release/: RELEASE_NOTES.md  release-description.html
src/: aesthetic_scorer.py  consistency_scorer.py  face_scorer.py  filename_parser.py  filter.py  gui.py  main.py  parser.py  report.py  scorer.py  wd_scorer.py
tools/: launcher.cs
