[project]
name = "asset-filter"
version = "0.4.0"
description = "NovelAI 캐릭터 감정 이미지 자동 필터링 도구 (Camie Tagger v2)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "jedosp"}
]
keywords = ["novelai", "camie-tagger", "emotion-filter", "anime", "image-classification"]

dependencies = [
    "onnxruntime-directml",
    "huggingface_hub",
    "numpy",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/jedosp/asset-filter"

[project.gui-scripts]
asset-filter = "src.main:main"
